eZ Online Editor MCE extension Changelog

5.0Beta2
* Added debug as text comment in ajax view's (embed_view, expand, load and search)
* Fixed bug #012950: Popup windows sizes are too small
* Fixed bug #012947: Cannot click search button in link properties until a filter is selected
* Fixed bug #012978 Strange symbol in Help popup
* Fixed bug #012951: Help Popup should have Help Tab content highlighted first
* Fixed bug #012948: Null result set in link dialog search tab should provide feedback
* Made ez_core only do POST ajax calls if post actually has a value

5.0beta
* clicking search buttons does not work (hides link dialog)
* fixed some ie6 issues in browse / search and custom tag popup
* let link / anchor buttons edit currently selected link / anchor
* Fixed table size selector styling bug in Opera
* Allow limiting AvailableClasses list based on embed class type
 (see bottom of content.ini for more info)
 * Made it easier to remove embed tags (node is now removed if you use del / backspace)
 * Made it possible to select root nodes when browsing & content node is now pre browsed for convinience
 * updated TinyMCE to 3.0.8
 * Added a help/about dialog, enabled help button.

0.99
* embed image issues ( 'view' not correct and not changable )
* paging on embed search added
* ed.selection.select() not working in Safari and Opera, switched to passing node as window param
* let theme handle non editable content (embed tags) because of ed.selection.select() issue, removed plugin
* custom tags now properly switching tags from div to span and back when changed.
* made all poup dialogs use one unified and extendable javascript api for common funcions
* clearing float on embed and custom block tags
* Fixed nested custom inline tags
* merging cells when cells where cells where TH type fixed
* removed support for Opera v9.2 ( now only 9.5 and higher is supported )
* some changes with float / align on embed elements